# ClawBody

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: download-model.mjs  setup.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  speech.rs
src-tauri/swift-lib/: Package.swift
src-tauri/swift-lib/Sources/: speech.swift
src/components/: ContextMenu.tsx  SettingsPanel.tsx  VRMViewer.tsx
src/components/settings/: AboutTab.tsx  AppearanceTab.tsx  ConnectionTab.tsx  ModelTab.tsx  VoiceCameraTab.tsx
src/hooks/: useCamera.ts  useNativeSpeech.ts  useOpenClaw.ts  useVoiceInput.ts  useVoiceOutput.ts  useWakeWord.ts
src/lib/: config.ts  emotion.ts  gateway-client.ts  idle-actions.ts  vrm-loader.ts
src/styles/: global.css  settings.css
