[package]
name = "clawbody"
version = "0.1.0"
description = "Give Your AI a Body — Desktop companion powered by OpenClaw"
authors = ["ClawBody Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "clawbody_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
